# DataCraft

./: README.md  example.yml
datacraft.python/: README.md  pyproject.toml
datacraft.python/datacraft/: cli.py  loader.py
